--- a/templates/base.html
+++ b/templates/base.html
@@ -3,6 +3,8 @@
     <a href="{%url 'home'%}">Home</a> 
     
     <a href="{%url 'about'%}">About</a>
+
+    <a href="{%url 'tasks'%}">Task manager</a>
 </header>
 
 {% block content %} {% endblock content %}
